# cmake_test_new

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: hello_test.cpp
